src/test/deca/context/invalid/extend_soi_meme.Deca
// Description :
// impossible l heritage de soi meme
//
// Resultats :
// Echec


class Coach extends Coach {
}
{
}
